- partially fix handing of array input - fix leagues that might have multiple days of play - hack in the calendar-selection form for adding a week.  Needs much improvement.

--- a/TODO
+++ b/TODO
@@ -19,3 +19,4 @@ New Features:
 	- volunteer info
 	- integrate Tony's score-reminder code
 	- better field management
+	- add "Sponsor" and "Sponsor URL" field to team info?
