Remove captain_id and assistant_id from team table and replace them with appropriate values in the team roster.  Setting/changing of status in roster still needs to be written.

--- a/TODO
+++ b/TODO
@@ -14,9 +14,12 @@ Reimplementation:
 Redesign:
 	- Look at redesigning permissions structure
 	- Clean up database schema
+	- de-templateify this code; Smarty is too much of a pain in the ass.
 
 New Features:
 	- volunteer info
 	- integrate Tony's score-reminder code
 	- better field management
 	- add "Sponsor" and "Sponsor URL" field to team info?
+	- carpool arrangements
+	- players looking for teams / teams looking for players
