- add item to TODO list - better mass-add script

--- a/TODO
+++ b/TODO
@@ -26,6 +26,7 @@ New Features:
 	- better score approval for coordinators, esp. handling of defaults
 	- carpool arrangements
 	- players looking for teams / teams looking for players
+	- add "Leagues Coordinated" to person view page.
 
 Field Management:
     Add more attributes to fields, auto-generate field websites from DB on
