--- a/TODO
+++ b/TODO
@@ -11,8 +11,11 @@ Docs:
 Code Cleanups and Refactoring:
 	- Clean up database schema
 	- (DONE) de-templateify this code; Smarty is too much of a pain in the ass.
-	- change includes/config.inc to be some sort of parsed configfile
+	- (DONE) change includes/config.inc to be some sort of parsed configfile
 	  so that both Perl and PHP code can use it for db settings, etc.
+	- better DB code -- use wrapper code similar to Drupal's.  Rewrite
+	  some of the looping algorithms to fetch rows one at a time for
+	  processing rather than stuffing into an array.
 
 New Features:
 	- start using the 'year' column for leagues, to allow multiple leagues
