- update author credits

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,6 @@
-Dave O'Neill <dmo@acm.org>
+Dave O'Neill <dmo@acm.org> 
+   - main author
+Mack King    <mackking@canada.com> 
+   - multiple fixes
+Tony Argentina <gm@ocua.ca>
+   - player rating system
