Update Tony's entry

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,5 @@ Dave O'Neill <dmo@acm.org>
    - main author
 Mack King    <mackking@canada.com> 
    - multiple fixes
-Tony Argentina <gm@ocua.ca>
-   - player rating system
+Tony Argentina <tonysa@ocua.ca>
+   - player rating system, ladder-based scheduling
