--- a/README
+++ b/README
@@ -1,54 +1,58 @@
 Leaguerunner - PHP software to run an ultimate league
 
-This is a redesign and rewrite of a piece of code formerly known as the "OCUA
-Engine".  It runs the Ottawa-Carleton Ultimate Association's summer, fall, and
-winter indoor leagues, handling over 350 teams and 4300 players per year.
+Leaguerunner is a LAMP application for managing an Ultimate league.  It runs
+the Ottawa-Carleton Ultimate Association's summer, fall, and winter indoor
+leagues, handling over 500 teams and 6000 registered players in more than 60
+different divisions and three seasons of play.
 
 Prerequisites:
-	- Apache webserver with mod_php, version 4.x or newer
-	- Perl, for the email reporting scripts
-	- MySQL database
-	- a lot of patience
-	
-If you're very impatient and want to set things up without reading the full
-documentation (that is, when it actually exists...), here's how to get things
-running.
 
-First, you'll need these prerequisites installed according to their
-instructions:
-	Apache  1.3.x
-	PHP     4.2.x
-	PEAR    1.4.x
-	MySQL   3.23.x
-	Perl    5.6.x  (optional)
+  1) Webserver with PHP 4.3.10 or newer.
+     You should be running the most up-to-date version of PHP 4.  Leaguerunner
+     does not yet work with PHP 5.
 
-If you don't know where to find them, ask your system administrator.  If you
-_are_ your system administrator and still don't know, ask Google.
+  2) MySQL database, and the relevant PHP support for MySQL
 
+  3) PHP PEAR libraries
 
-Now, to install the database, you'll need to create the database and set up a
-MySQL user.  This is done by default as part of setup/db/mysql_schema.sql if
-you run it as:
-  mysql -uroot -p < setup/db/mysql_schema.sql
-  
-however, you probably don't want the default database name, username and
-password.  To change it before running that line, edit the file and change the
-lines:
-  DROP database IF EXISTS leaguerunner;
-  CREATE database leaguerunner;
-  use leaguerunner;
+  4) PHP jpgraph library
 
-  grant all on leaguerunner.* to leaguerunner@localhost identified by 'password';
+  5) (optional) the ability to run Perl scripts from the commandline for
+     maintenance tasks.
 
-to use whatever DB name you'd like wherever you see 'leaguerunner', and
-whatever username you'd like in place of 'leaguerunner@localhost'.  The
-password should also be changed from 'password' to something less guessable.
+Once the prerequisites are installed and configured normally (nothing really
+special is needed for Leaguerunner), you can install the software.
 
-If you already have a user and database, just delete those lines.
+To install Leaguerunner:
+  1) copy all of the src/ directory to some location under your server's web
+     root.  If your site's root is at /var/www/html, /var/www/html/leaguerunner
+     is a good place to put it.  You can also run it from a user's public_html
+     directory if you wish.
 
-Then, set up the leaguerunner database tables with:
+  2) initialise the database.  First, you need to create it.  This can be done
+     by running: 
+        mysql -uroot -p
+     and logging in as the MySQL root user.  Once logged in, run the following
+     SQL commands:
+       CREATE DATABASE leaguerunner;
+       GRANT ALL ON leaguerunner.* TO leaguerunner_user@localhost IDENTIFIED BY 'password';
+       FLUSH PRIVILEGES;
+     Be sure to choose an appropriate username instead of "leaguerunner_user"
+     and a better password in place of "password".
 
-mysql -uroot -p < setup/db/mysql_schema.sql
-mysql -uroot -p < setup/db/mysql_initialdata.sql
+     Once this is done, you will need to import the database schema using:
+        mysql -u leaguerunner_user -p < db/mysql_schema.sql
+     and populate some of the required initial data with:
+        mysql -u leaguerunner_user -p < db/mysql_initialdata.sql
 
-(using your own db user if you've already created one.
+     Each time, you  will be prompted for the password of "leaguerunner_user",
+     so enter the one you just used when creating it.
+
+  3) Change into the directory in which you installed Leaguerunner, and edit
+     the leaguerunner.conf file.  You will need to edit 
+     $DB_URL to use the username and password you used when creating the
+        database;
+     $BASE_URL to set the base URL used to access Leaguerunner.
+
+Once this is complete, you should be able to point your web browser at the base
+URL and log in using the user 'admin' with a password of 'admin'.
