--- a/addons/drupal-5.x/README
+++ b/addons/drupal-5.x/README
@@ -3,9 +3,15 @@ database accessible by the drupal database user on the same MySQL server.
 
 CONVERTING FROM 4.x
 ~~~~~~~~~~~~~~~~~~~
-When converting from a 4.x drupal, it will be necessary to modify the
-'authname' column of 'authmap', and the 'init' column of 'users', so that the
-entries are suffixed with '@leaguerunner' instead of '@ocua'.
+When converting from a system using the 4.x Drupal leaguerunner.module, it will
+be necessary to modify the 'authname' column of 'authmap', and the 'init'
+column of 'users', so that the entries are suffixed with '@leaguerunner'
+instead of '@ocua'.
 
-The query to do this is:
-	TODO: write query for migration
+The queries to fix this are: 
+
+      UPDATE users SET init = concat_ws('@',SUBSTRING_INDEX( init, '@', 1),'leaguerunner') WHERE init LIKE '%@ocua';
+
+      UPDATE authmap SET authname = concat_ws('@',SUBSTRING_INDEX( authname, '@', 1),'leaguerunner') WHERE authname LIKE '%@ocua';
+ 
+
