I think I've done enough to be included in the authors list. :-)

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,5 @@ Mack King    <mackking@canada.com>
    - multiple fixes
 Tony Argentina <tonysa@ocua.ca>
    - player rating system, ladder-based scheduling
+Greg Schmidt <gregs@trawna.com>
+   - TUC changes, registration system
